code/human_written_tests/WebAssembly/processed_control_flow_validation/test_block_170.wast
(assert_malformed
  (module quote "(func block $a end $l)")
  "mismatching label"
)